admin system other improvements
* improved check function in the user controller to give information if an authorized user is an admin;
* changed page assess system so now not a user or a user that is not an admin, can't open the admin page;
* added the feature that shows if the authorized user is an admin in the user info page;
* added button that moves the user to the admin page in the account page layout (the button appears if the user is an admin);
* added admin page template so there can be added some sections in the future updates;
* small code changes;
* small design changes.

--- a/3DForge/ClientApp/src/pages/CatalogPage/.module.css
+++ b/3DForge/ClientApp/src/pages/CatalogPage/.module.css
@@ -239,6 +239,29 @@
     margin-top: 20px;
 }
 
+.show_more_authors {
+    position: relative;
+    margin-top: 15px;
+    height: 30px;
+}
+
+.show_more_authors_text {
+    cursor: pointer;
+    position: absolute;
+    left: -10px;
+    color: #AE35D9;
+    font-size: 25px;
+    font-weight: bold;
+    padding-inline: 5px;
+    padding-block: 3px;
+    border-radius: 5px;
+}
+
+.show_more_authors_text:hover {
+    background-color: #AE35D9;
+    color: white;
+}
+
 .rating_value_filter {
     background-color: white;
     border-radius: 8px;
