--- a/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
+++ b/3DForge/ClientApp/src/pages/UserInfoPage/.module.css
@@ -47,18 +47,28 @@
     font-weight: 600;
 }
 
+.is_administrator {
+    color: #C99E22;
+    text-align: center;
+    font-size: 26px;
+    font-weight: 600;
+    margin-top: 10px;
+    letter-spacing: 1px;
+}
+
 .email {
     color: #3E86F0;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
-    margin-block: 10px;
+    margin-top: 10px;
 }
 
 .country_and_city {
     text-align: center;
     font-size: 23px;
     font-weight: 600;
+    margin-top: 10px;
 }
 
 .log_out_button {
@@ -131,6 +141,7 @@
 }
 
 .info_field_cell {
+    cursor: pointer;
     position: relative;
     height: 35px;
     border: 2px solid white;
@@ -148,4 +159,24 @@
     transform: translateY(-50%);
     color: white;
     font-size: 25px;
+}
+
+.copy_text_message {
+    position: fixed;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: black;
+    border-radius: 6px;
+    padding-block: 5px;
+    padding-inline: 10px;
+    opacity: 0;
+    transition: 0.3s;
+    z-index: 1;
+}
+
+.copy_text_message_text {
+    color: white;
+    font-size: 25px;
+    letter-spacing: 1px;
 }
