--- a/3DForge/ClientApp/src/pages/AdminPage/.module.css
+++ b/3DForge/ClientApp/src/pages/AdminPage/.module.css
@@ -50,13 +50,13 @@
     padding-block: 15px;
 }
 
-.section:not(:last-child) {
-    border-bottom: 2px solid #7322b0;
-}
+    .section:not(:last-child) {
+        border-bottom: 2px solid #7322b0;
+    }
 
-.section:hover {
-    background-color: rgb(101, 36, 223);
-}
+    .section:hover {
+        background-color: rgb(101, 36, 223);
+    }
 
 .section_name {
     display: block;
@@ -71,4 +71,81 @@
 
 .section_content {
     position: relative;
+}
+
+.models_group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.Owner {
+    position: relative;
+    font-size: 35px;
+    letter-spacing: 1px;
+    color: white;
+    left: 3%;
+}
+.Name {
+    position: relative;
+    font-size: 35px;
+    letter-spacing: 1px;
+    color: white;
+    left: -2%;
+}
+.Depth {
+    position: relative;
+    left: -6%;
+    font-size: 35px;
+    letter-spacing: 1px;
+    color: white;
+}
+.Uploaded {
+    position: relative;
+    left: -10%;
+    font-size: 35px;
+    letter-spacing: 1px;
+    color: white;
+}
+.model_item {
+    background-color: #8f2fda;
+    border-color: #8f2fda;
+    border-radius: 20px;
+
+    position: relative;
+    flex-basis: 100%;
+    margin-bottom: 20px;
+    padding: 10px;
+    color: white;
+}
+.model_Owner {
+    position: relative;
+    left: 0%;
+    top: 40%;
+    font-size: 35px;
+    letter-spacing: 1px;
+}
+.model_Name {
+    position: relative;
+    top: 12%;
+    left: 20%;
+    font-size: 35px;
+    letter-spacing: 1px;
+    max-width: 15%; /* Максимальна ширина тексту */
+    word-wrap: break-word; /* Дозволяє переносити слова, якщо вони не вміщаються в рядок */
+}
+.model_Depth {
+    position: relative;
+    left: 43%;
+    top: -20%;
+    font-size: 35px;
+    letter-spacing: 1px;
+}
+.model_Uploaded {
+    position: relative;
+    left: 65%;
+    top: -35%;
+    font-size: 35px;
+    letter-spacing: 1px;
+    max-width: 35%; /* Максимальна ширина тексту */
+    word-wrap: break-word; /* Дозволяє переносити слова, якщо вони не вміщаються в рядок */
 }
