Upload model function update
* added oportunity to upload a model by an authorized user through the modal window;
* small visual improvements.

--- a/3DForge/ClientApp/src/pages/CatalogPage/.module.css
+++ b/3DForge/ClientApp/src/pages/CatalogPage/.module.css
@@ -10,7 +10,7 @@
 .content {
     position: relative;
     display: grid;
-    grid-template-columns: 350px auto;
+    grid-template-columns: 340px auto;
     grid-column-gap: 20px;
     width: 95%
 }
@@ -436,6 +436,12 @@
     text-underline-offset: 5px;
 }
 
+.add_model_button_loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .add_model_button {
     cursor: pointer;
     position: relative;
@@ -469,6 +475,18 @@
     padding-left: 5%;
 }
 
+@media (width < 1200px) {
+    .add_model_button_text {
+        font-size: 2.2vw;
+    }
+}
+
+@media (width < 1045px) {
+    .add_model_button_text {
+        display: none;
+    }
+}
+
 .model_list_is_empty {
     position: absolute;
     display: flex;
@@ -491,6 +509,12 @@
     grid-column-gap: 10px;
     grid-row-gap: 10px;
     margin-top: 20px;
+}
+
+@media (width < 1200px) {
+    .model_list {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 .model_list_is_unloaded {
@@ -618,20 +642,4 @@
 
 .current_page_navigator_obj {
     background-color: #5126bf;
-}
-
-.model_upload_window_background {
-    position: fixed;
-    display: flex;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.model_upload_window {
-    background-color: white;
 }
