--- a/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
+++ b/3DForge/ClientApp/src/components/AccountPageLayout/.module.css
@@ -222,6 +222,9 @@
     background-color: #C99E22;
     border-radius: 10px;
     padding-inline: 5px;
+    -webkit-box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.27);
+    -moz-box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.27);
+    box-shadow: 0px 0px 5px 4px rgba(0, 0, 0, 0.27);
     z-index: 1;
 }
 
