--- a/3DForge/ClientApp/src/pages/AdminPage/.module.css
+++ b/3DForge/ClientApp/src/pages/AdminPage/.module.css
@@ -1,5 +1,10 @@
 .main {
     position: relative;
+    margin-top: 40px;
+    margin-bottom: 150px;
+}
+
+.page_loading {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,12 +17,15 @@
     display: grid;
     grid-template-columns: calc(100px + 17%) 3px auto;
     grid-column-gap: calc(0.5% + 10px);
+    margin-left: 50%;
+    transform: translateX(-50%);
     width: 95%;
 }
 
 .navigation {
     position: relative;
     color: white;
+    height: fit-content;
     padding-block: 20px;
 }
 
@@ -50,13 +58,22 @@
     padding-block: 15px;
 }
 
-    .section:not(:last-child) {
-        border-bottom: 2px solid #7322b0;
-    }
+.section:not(:last-child) {
+    border-bottom: 2px solid #7322b0;
+}
 
-    .section:hover {
-        background-color: rgb(101, 36, 223);
-    }
+.section:hover {
+    background-color: rgb(101, 36, 223);
+}
+
+.selected_section {
+    background-color: rgb(108, 0, 147);
+}
+
+.disabled_section {
+    background-color: rgb(156, 156, 156);
+    color: rgb(99, 99, 99);
+}
 
 .section_name {
     display: block;
@@ -67,85 +84,10 @@
 
 .separating_line {
     background-color: #7C26BF;
+    height: 100%;
 }
 
 .section_content {
     position: relative;
-}
-
-.models_group {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.Owner {
-    position: relative;
-    font-size: 35px;
-    letter-spacing: 1px;
-    color: white;
-    left: 3%;
-}
-.Name {
-    position: relative;
-    font-size: 35px;
-    letter-spacing: 1px;
-    color: white;
-    left: -2%;
-}
-.Depth {
-    position: relative;
-    left: -6%;
-    font-size: 35px;
-    letter-spacing: 1px;
-    color: white;
-}
-.Uploaded {
-    position: relative;
-    left: -10%;
-    font-size: 35px;
-    letter-spacing: 1px;
-    color: white;
-}
-.model_item {
-    background-color: #8f2fda;
-    border-color: #8f2fda;
-    border-radius: 20px;
-
-    position: relative;
-    flex-basis: 100%;
-    margin-bottom: 20px;
-    padding: 10px;
-    color: white;
-}
-.model_Owner {
-    position: relative;
-    left: 0%;
-    top: 35%;
-    font-size: 35px;
-    letter-spacing: 1px;
-}
-.model_Name {
-    position: relative;
-    top: 11%;
-    left: 20%;
-    font-size: 35px;
-    letter-spacing: 1px;
-    max-width: 15%; /* Максимальна ширина тексту */
-    word-wrap: break-word; /* Дозволяє переносити слова, якщо вони не вміщаються в рядок */
-}
-.model_Depth {
-    position: relative;
-    left: 43%;
-    top: -16%;
-    font-size: 35px;
-    letter-spacing: 1px;
-}
-.model_Uploaded {
-    position: relative;
-    left: 65%;
-    top: -41%;
-    font-size: 35px;
-    letter-spacing: 1px;
-    max-width: 35%; /* Максимальна ширина тексту */
-    word-wrap: break-word; /* Дозволяє переносити слова, якщо вони не вміщаються в рядок */
+    max-height: 700px;
 }
