my publications page update
* added page with the user's models;
* added ability to upload a model in the page;
* small fixes.

--- a/3DForge/ClientApp/src/components/LoadingAnimation/.module.css
+++ b/3DForge/ClientApp/src/components/LoadingAnimation/.module.css
@@ -1,3 +1,8 @@
+.main {
+    width: fit-content;
+    height: fit-content;
+}
+
 .loader {
     border: 16px solid #00a193;
     border-top: 16px solid #3498db;
