--- a/3DForge/ClientApp/src/pages/ModelPage/.module.css
+++ b/3DForge/ClientApp/src/pages/ModelPage/.module.css
@@ -363,22 +363,22 @@
 
 .view_5 {
     background-image: url(https://cdn.animaapp.com/projects/6537996634ad3d584d8c9f1f/releases/65477cb487304b74da313e8b/img/rectangle-208.svg);
-    background-size: 100% 100%;
+    background-size: 100% 81px;
     height: 81px;
-    left: 50px;
+    left: 5%;
     position: relative;
     top: 36px;
-    width: 1423px;
+    width: 90%;
 }
 
 .navbar {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    left: 50px;
+    left: 5%;
     position: absolute;
     top: 23px;
-    width: 1323px;
+    width: 90%;
 }
 
 .text_wrapper_12 {
@@ -389,18 +389,18 @@
     letter-spacing: 0;
     line-height: normal;
     margin-top: 2px;
-    position: relative;
     width: fit-content;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 .overlap_3 {
     border-radius: 10px;
     height: 1186px;
-    left: 50px;
+    left: 5%;
     position: relative;
     top: 100px;
-    width: 1423px;
+    width: 90%;
 }
 
 .view_6 {
@@ -408,17 +408,16 @@
     border-radius: 10px;
     height: 1186px;
     left: 0;
-    position: absolute;
     top: 0;
-    width: 1423px;
+    width: 100%;
 }
 
 .image_removebg {
     height: 501px;
-    left: 75px;
+    left: 5%;
     position: absolute;
     top: 60px;
-    width: 501px;
+    width: 40%;
 }
 
 .unloaded_model_picture {
@@ -432,13 +431,7 @@
     width: 501px;
 }
 
-.group-2 {
-    height: 106px;
-    left: 810px;
-    position: absolute;
-    top: 58px;
-    width: 805px;
-}
+
 
 .text_wrapper_13 {
     color: #000000;
@@ -446,7 +439,7 @@
     font-size: 40px;
     font-weight: 500;
     height: 80px;
-    left: 85px;
+    left: 55%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -460,21 +453,21 @@
     font-size: 24px;
     font-weight: 500;
     height: 26px;
-    left: 700px;
+    left: 55%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     top: 80px;
     white-space: nowrap;
-    width: 801px;
+    width: 50%;
 }
 
 .group_3 {
     height: 138px;
-    left: 665px;
+    left: 50%;
     position: absolute;
     top: 293px;
-    width: 144px;
+    width: 45%;
 }
 
 .overlap_group_3 {
@@ -482,7 +475,7 @@
     background-size: 100% 100%;
     height: 138px;
     position: relative;
-    width: 742px;
+    width: 100%;
 }
 
 .text_wrapper_15 {
@@ -503,7 +496,7 @@
     border-radius: 20px;
     box-shadow: 0px 0px 4px 2px #00000040;
     height: 64px;
-    left: 345px;
+    left: 40%;
     position: absolute;
     top: 38px;
     width: 350px;
@@ -664,8 +657,8 @@
 }
 
 .group_7 {
-    height: 127px;
-    left: 610px;
+    height: 1270px;
+    left: 50%;
     position: absolute;
     top: 892px;
     width: 756px;
@@ -677,11 +670,12 @@
     font-size: 28px;
     font-weight: 500;
     height: 34px;
-    left: 0;
+    left: 50%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     top: 0;
+    width:50%;
 }
 
 .text_wrapper_18 {
@@ -690,6 +684,8 @@
     font-size: 28px;
     font-weight: 500;
     letter-spacing: 0;
+    position:absolute;
+    left:-100%;
 }
 
 .text_wrapper_19 {
@@ -712,50 +708,44 @@
 
 .line_3 {
     height: 1px;
-    left: 610px;
+    left: 50%;
     object-fit: cover;
     position: absolute;
     top: 598px;
-    width: 752px;
+    width: 46%;
 }
 
 .line_4 {
     height: 1px;
-    left: 610px;
+    left: 50%;
     object-fit: cover;
     position: absolute;
     top: 856px;
-    width: 752px;
+    width: 46%;
 }
 
 .line_5 {
     height: 1px;
-    left: 610px;
+    left: 50%;
     object-fit: cover;
     position: absolute;
     top: 1053px;
-    width: 752px;
+    width: 46%;
 }
 
-.group_8 {
-    height: 188px;
-    left: 610px;
-    position: absolute;
-    top: 634px;
-    width: 763px;
-}
+
 
 .group_9 {
     height: 58px;
     left: 0;
-    position: absolute;
-    top: 53px;
-    width: 769px;
+    position: relative;
+    top: 630px;
+    width: 100%;
 }
 
 .download_removebg {
     height: 33px;
-    left: 0;
+    left: 50%;
     object-fit: cover;
     position: absolute;
     top: 12px;
@@ -769,7 +759,7 @@
     font-size: 24px;
     font-weight: 500;
     height: 29px;
-    left: 47px;
+    left: 55%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -782,7 +772,7 @@
     font-size: 24px;
     font-weight: 500;
     height: 29px;
-    left: 433px;
+    left: 77%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -795,7 +785,7 @@
     font-size: 24px;
     font-weight: 500;
     height: 58px;
-    left: 593px;
+    left: 85%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -806,17 +796,17 @@
 .group_10 {
     height: 58px;
     left: 0;
-    position: absolute;
-    top: 130px;
-    width: 769px;
+    position: relative;
+    top: 500px;
+    width: 100%;
 }
 
 .group_11 {
     height: 34px;
     left: 0;
-    position: absolute;
-    top: 0;
-    width: 275px;
+    position: relative;
+    top: 370px;
+    width: 100%;
 }
 
 .div_6 {
@@ -825,7 +815,7 @@
     font-size: 28px;
     font-weight: 500;
     height: 34px;
-    left: 0;
+    left: 50%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -848,7 +838,7 @@
 
 .down_arrow_backup_2 {
     height: 22px;
-    left: 251px;
+    left: calc(50% + 230px);
     position: absolute;
     top: 9px;
     width: 22px;
@@ -864,7 +854,7 @@
 }
 .group_0_5_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -873,7 +863,7 @@
 
 .group_1_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -881,7 +871,7 @@
 }
 .group_1_5_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -890,7 +880,7 @@
 
 .group_2_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -898,7 +888,7 @@
 }
 .group_2_5_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -907,7 +897,7 @@
 
 .group_3_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -915,7 +905,7 @@
 }
 .group_3_5_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -924,7 +914,7 @@
 
 .group_4_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -932,7 +922,7 @@
 }
 .group_4_5_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -941,7 +931,7 @@
 
 .group_5_star {
     height: 26px;
-    left: 1069px;
+    left: 55%;
     position: absolute;
     top: 224px;
     width: 156px;
@@ -949,26 +939,35 @@
 }
 .box_image {
     height: 58px;
-    left: -200px;
-    position: relative;
+    left: 40%;
+    position:absolute;
     top: 202px;
     width: 227px;
     content: url(img/cube-image.svg)
 }
 .edit_image {
     height: 48px;
-    left: -192px;
-    position: relative;
-    top: 232px;
+    left: 41%;
+    position: absolute;
+    top: 282px;
     width: 210px;
     content: url(img/edit-icon.svg)
 }
+.edit_image_invisible {
+    height: 48px;
+    left: 41%;
+    position: absolute;
+    top: 282px;
+    width: 210px;
+    content: url(img/edit-icon.svg);
+    visibility: hidden;
+}
 .group_13 {
     height: 58px;
-    left: 710px;
+    left: 0;
     position: relative;
-    top: -50px;
-    width: 227px;
+    top: -440px;
+    width: 100%;
 }
 
 .overlap_4 {
@@ -980,18 +979,7 @@
     width: 225px;
 }
 
-.text_wrapper_27 {
-    color: #333333;
-    font-family: "Montserrat", Helvetica;
-    font-size: 24px;
-    font-weight: 500;
-    height: 29px;
-    left: 54px;
-    letter-spacing: 0;
-    line-height: normal;
-    position: absolute;
-    top: 14px;
-}
+
 
 .view_13 {
     background-color: #33FF66;
@@ -1003,13 +991,7 @@
     width: 30px;
 }
 
-.group_14 {
-    height: 29px;
-    left: 1442px;
-    position: absolute;
-    top: 222px;
-    width: 122px;
-}
+
 
 .text_wrapper_28 {
     color: #696969;
@@ -1017,17 +999,17 @@
     font-size: 24px;
     font-weight: 500;
     height: 29px;
-    left: -200px;
+    left: 65%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     text-decoration: underline;
-    top: 0;
+    top: 19%;
 }
 
 .group_15 {
     height: 47px;
-    left: 610px;
+    left: 50%;
     position: absolute;
     top: 1089px;
     width: 683px;
@@ -1094,10 +1076,10 @@
 
 .view_14 {
     height: 411px;
-    left: 50px;
+    left: 5%;
     position: relative;
     top: 133px;
-    width: 1423px;
+    width: 90%;
 }
 
 .overlap_5 {
@@ -1105,7 +1087,7 @@
     border-radius: 10px;
     height: 411px;
     position: relative;
-    width: 1423px;
+    width: 100%;
 }
 
 .text_wrapper_31 {
@@ -1114,7 +1096,7 @@
     font-size: 40px;
     font-weight: 700;
     height: 49px;
-    left: 85px;
+    left: 20%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -1127,12 +1109,12 @@
     font-size: 36px;
     font-weight: 500;
     height: 132px;
-    left: 85px;
+    left: 10%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
     top: 194px;
-    width: 1353px;
+    width: 90%;
 }
 
 .view_15 {
@@ -1335,10 +1317,10 @@
 
 .overlap_7 {
     height: 1615px;
-    left: 50px;
+    left: 5%;
     position: relative;
     top: 205px;
-    width: 1427px;
+    width: 100%;
 }
 
 .avatar_svgrepo_com_2 {
@@ -1354,7 +1336,7 @@
     left: 0;
     position: absolute;
     top: 0;
-    width: 1427px;
+    width: 90%;
 }
 
 .overlap_8 {
@@ -1362,15 +1344,14 @@
     border-radius: 10px;
     height: 1615px;
     position: relative;
-    width: 1423px;
+    width: 100%;
 }
 
 .group_18 {
-    height: 479px;
-    left: 85px;
-    position: absolute;
+    left: 8%;
     top: 194px;
     width: 1052px;
+    margin-bottom: 20px; /* Загальний вертикальний відступ між елементами */
 }
 
 .overlap_9 {
@@ -1379,6 +1360,7 @@
     position: absolute;
     top: 0;
     width: 1052px;
+    margin-bottom: 10px; /* Додає вертикальний відступ між елементами з класом div18 */
 }
 
 .group_19 {
@@ -1387,6 +1369,7 @@
     position: absolute;
     top: 0;
     width: 265px;
+    margin-bottom: 10px; 
 }
 
 .div_7 {
@@ -1427,7 +1410,6 @@
 .avatar_svgrepo_com_3 {
     height: 105px;
     left: 0;
-    position: absolute;
     top: 8px;
     width: 101px;
 }
@@ -1441,7 +1423,6 @@
     left: 132px;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
     top: 23px;
 }
 
@@ -1462,7 +1443,6 @@
     left: 58px;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
     top: 0;
     width: 560px;
 }
@@ -1515,7 +1495,6 @@
     left: 300px;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
     top: 0;
 }
 
@@ -1528,7 +1507,6 @@
     left: 132px;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
     top: 403px;
     width: 515px;
 }
@@ -1550,7 +1528,6 @@
     left: 55px;
     letter-spacing: 0;
     line-height: normal;
-    position: absolute;
     top: 50px;
     width: 460px;
 }
@@ -1656,7 +1633,7 @@
     font-size: 40px;
     font-weight: 700;
     height: 49px;
-    left: 832px;
+    left: 65%;
     letter-spacing: 0;
     line-height: normal;
     position: absolute;
@@ -1665,7 +1642,7 @@
 
 .group_28 {
     height: 1336px;
-    left: 896px;
+    left: 65%;
     position: absolute;
     top: 194px;
     width: 442px;
